update makefile and mapper file
